# vcs-clojure

./: .gitignore  README.md  stack.yaml  th-vcs-clojure.cabal
Visualiser/: index.html  main.js  patch.json
app/: Main.hs  Tester.hs
report/: bibliography.bib  report.texnicle  report_main.blg  report_main.out  report_main.tex  report_main.toc
scripts/: clone-or-pull-repos.sh  mine-conflicts.sh  mineconflicts.sh  minify-conflicts.sh  repos.json  score-repos.sh
src/: Apply.hs  ApplyMultiRec.hs  Cost.hs  Diff.hs  DiffMultiRec.hs  DiffParser.hs  Disjoint.hs  HList.hs  Lang.hs  LangRec.hs  LangRecSimple.hs  Lib.hs  Multirec.hs  Oracle.hs  PPPatch.hs  Parser.hs  PrettyPrint.hs  RegularTypes.hs
src/Clojure/: AST.hs  Lang.hs  Parser.hs  PrettyPrint.hs
src/Language/: Common.hs
src/Language/BinaryTree/: AST.hs  Cost.hs  Lang.hs  PrettyPrint.hs  ToJSON.hs
src/Language/Clojure/: AST.hs  Cost.hs  Lang.hs  Parser.hs  PrettyPrint.hs  ToJSON.hs
src/Language/Presentation/: AST.hs  Cost.hs  Lang.hs  PrettyPrint.hs  ToJSON.hs
src/Oracle/: ConsOracle.hs  CopyOracle.hs  CostOracle.hs  DiffOracle.hs  DiffOracleOld.hs  DisjointOracle.hs  DumbOracle.hs  GroupedDiffOracle.hs  Internal.hs  NoDupBranches.hs  NoIllegalCopy.hs  NoOracle.hs  Oracle.hs
src/Patches/: Diff3.hs  raw
src/Util/: DiffParser.hs  PPPatch.hs  Test.hs  ToJSON.hs  Treeview.hs  UnixDiff.hs
src/VCS/: Apply.hs  Compatible.hs  Cost.hs  Diff.hs  DiffPartial.hs  Disjoint.hs  Multirec.hs
test/: Spec.hs  strings.clj  tent.clj  tmp.clj
test/conflicts/manual/deepmod/: dst.clj  src.clj
test/conflicts/manual/deepmod2/: dst.clj  dst.clj_view  src.clj  src.clj_view
test/conflicts/manual/diff3/: dst.clj  dst.clj_view  src.clj  src.clj_view
test/conflicts/manual/head-safehead/: head.clj  safehead.clj
test/conflicts/manual/head-safehead-disj/: safehead-1.clj  safehead-2.clj
test/conflicts/manual/ins/: dst.clj  src.clj
test/conflicts/manual/longlist/: list1.clj  list2.clj
test/conflicts/manual/modtop/: dst.clj  src.clj
test/conflicts/manual/plus-minus/: minus.clj
test/conflicts/manual/slow/: dst.clj  src.clj
test/conflicts/manual/splitFn/: dst.clj  src.clj
test/conflicts/manual/treeview/: dst.clj  src.clj
test/conflicts/mined/clj-http-2a830b4f21c7a3cf06600f6f94fc6823eff73a8d-1559443db55a0d8fde95448180fc91a191dacfc/: A1.clj  A1.clj_view  B1.clj  M.clj  O1.clj  O1.clj_view
test/conflicts/mined/clj-http-454365eff4f139c124264d88a0f64e8e329531f6-f952077c140c9d8aa2a18e9b99272e4f6b8f029/: A1.clj_view  M.clj  O1.clj_view
test/conflicts/mined/clj-http-4780e4d480357c204b19074fac74e5f9049dacc5-ff65b6da87c4fb9967a0b281b800cdf25105d6c/: A1.clj  B1.clj  M.clj  O1.clj
test/conflicts/mined/clj-http-615538c8280f128974e741d7b4273b35c051aa38-27e6ac8de8698735b31c0646f8cc8d70380db92/: B1.clj  M.clj
test/conflicts/mined/clj-http-61980fd495e263df4797a4893343d1ca1fa02b1f-02b7297eaee95b15b8f4e7bfad3d77ae07d0fd7/: A1.clj  B1.clj  M.clj  O1.clj
test/conflicts/mined/clj-http-61980fd495e263df4797a4893343d1ca1fa02b1f-76d5b54eae9315d9a9bb1423805ecddd01d8172/: A1.clj  B1.clj  M.clj  O1.clj
test/conflicts/mined/clj-http-666a5b668addccf6327e842028a7076447a583af-8860ce26b2547db508b7d2d4e269106355a646e/: A1.clj  B1.clj  M.clj  O1.clj
test/conflicts/mined/clj-http-720dba3c1049c0f077b4305b2bc420da73e9b0e3-27e6ac8de8698735b31c0646f8cc8d70380db92/: A1.clj  O1.clj
test/conflicts/mined/clj-http-afab7697ff98c6202ba616061518e9fd6aea3ffb-79159f531a42b88f367e5b1d497b8898d9ba1f0/: A1.clj  B1.clj  M.clj  O1.clj
test/conflicts/mined/incanter-0ab56c4c49d6b2cf4bf601dd4c6f5e481b06f788-667d25604c92f2bdf145df891c1a878b3b84ce0/: B1.clj  M.clj  O1.clj
test/conflicts/mined/incanter-23c8e611fde12f982f44d8f36ea5a2e3d610d89b-bbb5f83932fdd17b25325433782958bf40bd3c3/: M.clj
test/conflicts/mined/incanter-29762d615c2538747b46e35d1b7afda14ccb98eb-2b0fbb78144bf68ecc481f9d8a0fdb6267bddb9/: A1.clj  M.clj
test/conflicts/mined/incanter-2aa7176c7dddf3b13704d4809130fbfb3f502df2-059717d988fe713e7765e272a5341b4046dd984/: B1.clj  M.clj  O1.clj
test/conflicts/mined/incanter-2aa7176c7dddf3b13704d4809130fbfb3f502df2-299d68d29ce763b10566e4b2321fcfe6de9b0d8/: B1.clj  M.clj  O1.clj
test/conflicts/mined/incanter-2aa7176c7dddf3b13704d4809130fbfb3f502df2-4d665ae2c495bb322a6cfdfdd28de910c91f6ca/: A1.clj  B1.clj  M.clj  O1.clj
test/conflicts/mined/incanter-2aa7176c7dddf3b13704d4809130fbfb3f502df2-a08bac0d7f39ef1df13add516430630e2830f1c/: B1.clj  M.clj  O1.clj
test/conflicts/mined/incanter-2aa7176c7dddf3b13704d4809130fbfb3f502df2-efb25498cfb0d2cae22766e5cb0a2b38e98ec58/: A1.clj  M.clj  O1.clj
test/conflicts/mined/incanter-2aa7176c7dddf3b13704d4809130fbfb3f502df2-fb17c6a2a7588413e4b1cd36fcbb1480c399779/: B1.clj  M.clj  O1.clj
test/conflicts/mined/incanter-2aa7176c7dddf3b13704d4809130fbfb3f502df2-fc08dd05171cdc44998410182a3213ad40a01d4/: B1.clj  M.clj  O1.clj
test/conflicts/mined/incanter-2cb09f2159b25f09b5786091e867604010d3519a-92bfcb86e3a0b372ec15b6740d6c971dcf43a04/: M.clj
test/conflicts/mined/incanter-438673838d6ff690b6b4b26660908df77282b9de-96169ae88e186258ec95461dd856589b2132f35/: M.clj
test/conflicts/mined/incanter-4400cf1d69c21f905df0e2901cb26d735caca3bf-c42607d6d5567b83be70fd52534f6be671de8b1/: M.clj
test/conflicts/mined/incanter-73aa7f7fa81fe19649c96f1b19e3943eb3600bda-01f59bb11435811d35ec77986f990013418cff4/: B1.clj  M.clj  O1.clj
test/conflicts/mined/incanter-73aa7f7fa81fe19649c96f1b19e3943eb3600bda-67da7e0c771601ce85b2fdcccd22f2bc135534a/: B1.clj  M.clj  O1.clj
test/conflicts/mined/incanter-73aa7f7fa81fe19649c96f1b19e3943eb3600bda-6d8c2a8d5dd39e26cb70d89c00bbf28441116d7/: B1.clj  M.clj  O1.clj
test/conflicts/mined/incanter-73aa7f7fa81fe19649c96f1b19e3943eb3600bda-9197a478686d358112507b7d2defadc051ed0c3/: B1.clj  M.clj  O1.clj
test/results/clj-http/: out.md
test/results/incanter/: out.md
test/results/lein-figwheel/: out.md
test/results/leiningen/: out.md
test/results/riemann/: out.md
test/results/ring/: out.md
(+370 files in other folders)
