name:                th-vcs-clojure
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/th-vcs-clojure#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Clojure.AST
                     , Language.Clojure.Parser
                     , Language.Clojure.PrettyPrint
                     , Language.Clojure.Lang
                     , Language.Clojure.ToJSON
                     , Language.Clojure.Cost
                     , Language.BinaryTree.Lang
                     , Language.BinaryTree.AST
                     , Language.BinaryTree.PrettyPrint
                     , Language.BinaryTree.ToJSON
                     , Language.BinaryTree.Cost
                     , Language.Common
                     , VCS.Apply
                     , VCS.Diff
                     , VCS.Multirec
                     , VCS.Cost
                     , VCS.Disjoint
                     , VCS.Compatible
                     , Util.PPPatch
                     , Util.DiffParser
                     , Util.UnixDiff
                     , Util.ToJSON
                     , Util.Treeview
                     , Oracle.Oracle
                     , Oracle.DiffOracle
                     , Oracle.NoOracle
                     , Oracle.Internal
                     , Oracle.NoDupBranches
                     , Oracle.DisjointOracle
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , optparse-applicative >= 0.13.0.0
                     , parsec
                     , wl-pprint
                     , mtl
                     , directory
                     , Diff
                     , aeson
                     , text
                     , vector
                     , transformers
                     , constraints
                     , symbol
  default-language:    Haskell2010

executable th-vcs-clojure-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , optparse-applicative >= 0.13.0.0
                     , th-vcs-clojure
                     , aeson-pretty
  default-language:    Haskell2010

executable th-vcs-clojure-tester
  hs-source-dirs:      app
  main-is:             Tester.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , process
                     , directory
                     , th-vcs-clojure
                     , filepath
                     , split
                     , time
                     , optparse-applicative >= 0.13.0.0
  default-language:    Haskell2010

test-suite th-vcs-clojure-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , directory
                     , filemanip
                     , filepath
                     , optparse-applicative >= 0.13.0.0
                     , th-vcs-clojure
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/th-vcs-clojure
